--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -8,92 +8,93 @@
   - default
   - scheduler
   - low
-:enabled: <%= !(ENV["RAILS_ENV"] == 'development') %>
-:schedule:
-  EnqueueSiteChannelVerifications:
-    cron: "42 1 * * *"
-    decription: "For Site Channels created within the past week, enqueue jobs to verify the domain of each unique brave_publisher_id."
-    queue: scheduler
-  EnqueueNightlyEmailsForPromoPublishersJob:
-    class: EnqueueEmailsForPromoPublishersJob
-    cron: "0 4 * * *"
-    args: [ 'nightly' ]
-    decription: "For nightly breakdown stats sent to top referrers"
-    queue: scheduler
-  EnqueueMonthlyEmailsForPromoPublishersJob:
-    class: EnqueueEmailsForPromoPublishersJob
-    cron: "0 0 1 * *"
-    args: [ 'monthly' ]
-    decription: "For monthly breakdown stats sent to top referrers including the last 4 months of data"
-    queue: scheduler
-  CleanStaleUpholdDataJob:
-    cron: "0 4 * * *"
-    description: "For Publishers who have stale uphold codes or access parameters, clean out uphold codes or access parameter."
-    queue: scheduler
-  CleanAbandonedSiteChannelsJob:
-    cron: "0 3 * * *"
-    description: "Remove abandoned site channels."
-  CreateUpholdCardsWhereMissingJob:
-    cron: "0 1 * * *"
-    description: "Ensure anonymous cards are created for those who need them."
-  Channels::TransferChannelsJob:
-    cron: "0 8 * * *"
-    description: "Complete transfer of channels that have exceeded their timeout time without being rejected"
-  Sync::ChannelPromoRegistrationsStatsJob:
-    cron: "*/2 * * * *"
-    description: "Sync stats for channel owned referral codes with the promo server every morning."
-  TwoFactorAuthenticationRemovalJob:
-    cron: "0 12 * * *"
-    description: "Handle two factor authentication removal requests, send reminder e-mails, process 2fa removals, remove channels/wallets when required"
-  Sync::UnattachedPromoRegistrationsStatsJob:
-    cron: "0 */12 * * *"
-    description: "Syncs referral stats for unattached codes every 12 hours."
-    queue: low
-  Sync::Zendesk::StartJob:
-    cron: "0 1 * * *"
-    description: "Syncs zendesk tickets"
-    queue: low
-  Cache::BrowserChannels::Main:
-    cron: "0 */2 * * *"
-    description: "Syncs V4 channels list"
-    queue: low
-  Cache::PiwikDataJob:
-    cron: "45 2 * * *"
-    description: "Refreshes the redis cache for piwik information everyday at 2:45 AM"
-    queue: scheduler
-  Cache::EyeshadeStatsJob:
-    cron: "50 2 * * *"
-    description: "Refreshes the redis cache for eyeshade stats information"
-    queue: scheduler
-  Sync::Bitflyer::UpdateMissingDepositsJob:
-    cron: "0 4 * * *"
-    description: "For bitflyer channels missing their deposit IDs"
-    queue: low
-  EnqueuePublishersForPayoutJob:
-    cron: "0 0 23 * *"
-    args: ['send_notifications']
-    description: "Notifies publishers their wallet is disconnected on the 23rd of every month."
-    queue: scheduler
-  EnqueuePublishersForPayoutJobMonthly:
-    class: EnqueuePublishersForPayoutJob
-    cron: "0 0 1 * *"
-    description: "Generates the list of unsettled transactions on the first of every month"
-    queue: scheduler
-  SetPayoutsInProgressJob:
-    cron: "0 0 12 * *"
-    description: "Sets a flag in redis which tells the app to display 'payout in progress' at the beginning of the month."
-    queue: scheduler
-  BitflyerRefreshJob:
-    cron: "0 4 * * *"
-    description: "Refresh n expired wallet connections per interval at a rate of r requests/min"
-    queue: scheduler
-  UpholdRefreshJob:
-    cron: "0 0 * * *"
-    description: "Refresh n expired wallet connections per interval at a rate of r requests/min"
-    queue: scheduler
-  GeminiRefreshJob:
-    cron: "0 2 * * *"
-    description: "Refresh n expired wallet connections per interval at a rate of r requests/min"
-    queue: scheduler
+:scheduler:
+  :enabled: <%= !(ENV["RAILS_ENV"] == 'development') %>
+  :schedule:
+    EnqueueSiteChannelVerifications:
+      cron: "42 1 * * *"
+      decription: "For Site Channels created within the past week, enqueue jobs to verify the domain of each unique brave_publisher_id."
+      queue: scheduler
+    EnqueueNightlyEmailsForPromoPublishersJob:
+      class: EnqueueEmailsForPromoPublishersJob
+      cron: "0 4 * * *"
+      args: [ 'nightly' ]
+      decription: "For nightly breakdown stats sent to top referrers"
+      queue: scheduler
+    EnqueueMonthlyEmailsForPromoPublishersJob:
+      class: EnqueueEmailsForPromoPublishersJob
+      cron: "0 0 1 * *"
+      args: [ 'monthly' ]
+      decription: "For monthly breakdown stats sent to top referrers including the last 4 months of data"
+      queue: scheduler
+    CleanStaleUpholdDataJob:
+      cron: "0 4 * * *"
+      description: "For Publishers who have stale uphold codes or access parameters, clean out uphold codes or access parameter."
+      queue: scheduler
+    CleanAbandonedSiteChannelsJob:
+      cron: "0 3 * * *"
+      description: "Remove abandoned site channels."
+    CreateUpholdCardsWhereMissingJob:
+      cron: "0 1 * * *"
+      description: "Ensure anonymous cards are created for those who need them."
+    Channels::TransferChannelsJob:
+      cron: "0 8 * * *"
+      description: "Complete transfer of channels that have exceeded their timeout time without being rejected"
+    Sync::ChannelPromoRegistrationsStatsJob:
+      cron: "*/2 * * * *"
+      description: "Sync stats for channel owned referral codes with the promo server every morning."
+    TwoFactorAuthenticationRemovalJob:
+      cron: "0 12 * * *"
+      description: "Handle two factor authentication removal requests, send reminder e-mails, process 2fa removals, remove channels/wallets when required"
+    Sync::UnattachedPromoRegistrationsStatsJob:
+      cron: "0 */12 * * *"
+      description: "Syncs referral stats for unattached codes every 12 hours."
+      queue: low
+    Sync::Zendesk::StartJob:
+      cron: "0 1 * * *"
+      description: "Syncs zendesk tickets"
+      queue: low
+    Cache::BrowserChannels::Main:
+      cron: "0 */2 * * *"
+      description: "Syncs V4 channels list"
+      queue: low
+    Cache::PiwikDataJob:
+      cron: "45 2 * * *"
+      description: "Refreshes the redis cache for piwik information everyday at 2:45 AM"
+      queue: scheduler
+    Cache::EyeshadeStatsJob:
+      cron: "50 2 * * *"
+      description: "Refreshes the redis cache for eyeshade stats information"
+      queue: scheduler
+    Sync::Bitflyer::UpdateMissingDepositsJob:
+      cron: "0 4 * * *"
+      description: "For bitflyer channels missing their deposit IDs"
+      queue: low
+    EnqueuePublishersForPayoutJob:
+      cron: "0 0 23 * *"
+      args: ['send_notifications']
+      description: "Notifies publishers their wallet is disconnected on the 23rd of every month."
+      queue: scheduler
+    EnqueuePublishersForPayoutJobMonthly:
+      class: EnqueuePublishersForPayoutJob
+      cron: "0 0 1 * *"
+      description: "Generates the list of unsettled transactions on the first of every month"
+      queue: scheduler
+    SetPayoutsInProgressJob:
+      cron: "0 0 12 * *"
+      description: "Sets a flag in redis which tells the app to display 'payout in progress' at the beginning of the month."
+      queue: scheduler
+    BitflyerRefreshJob:
+      cron: "0 4 * * *"
+      description: "Refresh n expired wallet connections per interval at a rate of r requests/min"
+      queue: scheduler
+    UpholdRefreshJob:
+      cron: "0 0 * * *"
+      description: "Refresh n expired wallet connections per interval at a rate of r requests/min"
+      queue: scheduler
+    GeminiRefreshJob:
+      cron: "0 2 * * *"
+      description: "Refresh n expired wallet connections per interval at a rate of r requests/min"
+      queue: scheduler
 
 :verbose: true
