--- a/config/database.yml
+++ b/config/database.yml
@@ -38,6 +38,8 @@ test:
     <<: *default
     replica: true
     url: <%= ENV['DATABASE_URL_TEST'] || "postgres://postgres@localhost/brave_publishers_test" %>
+  stats_redshift:
+    <<: *stats_redshift_default
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
