--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "@types/styled-components": "^5.1.0",
-    "audit-ci": "4.x",
+    "audit-ci": "6.6.1",
     "autoprefixer": "^9.4.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.1.0",
