--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,6 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      NODE_OPTIONS: "--openssl-legacy-provider"
     services:
       postgres:
         image: postgres
@@ -26,7 +24,6 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
@@ -64,7 +61,7 @@ jobs:
         env:
           DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
       - name: Run tests
-        run: RAILS_ENV=test bundle exec rails test
+        run: NODE_OPTIONS=--openssl-legacy-provider RAILS_ENV=test bundle exec rails test
         env:
           DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
 
