--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -62,4 +62,4 @@ jobs:
       - name: Brakeman
         run: bundle exec brakeman
       - name: Compile Assets Check
-        run: DB_ADAPTER=nulldb DATABASE_URL='nulldb://nohost' CREATORS_FULL_HOST="HOST" SECRET_KEY_BASE='KEY' RAILS_ENV=production bundle exec rake assets:precompile
+        run: NODE_OPTIONS=--openssl-legacy-provider DB_ADAPTER=nulldb DATABASE_URL='nulldb://nohost' CREATORS_FULL_HOST="HOST" SECRET_KEY_BASE='KEY' RAILS_ENV=production bundle exec rake assets:precompile
