--- a/package.json
+++ b/package.json
@@ -131,11 +131,11 @@
     "stylelint-processor-styled-components": "^1.10.0",
     "stylelint-scss": "^3.16.0",
     "sugarss": "^2.0.0",
-    "ts-loader": "^5.3.0",
-    "tslint": "^5.14.0",
+    "ts-loader": "9.4.4",
+    "tslint": "6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^8.0.1",
-    "tslint-react": "^3.6.0",
+    "tslint-config-standard": "9.0",
+    "tslint-react": "5.0",
     "typescript": "^5.1.6"
   },
   "resolutions": {
