--- a/package.json
+++ b/package.json
@@ -107,30 +107,31 @@
     "@types/react-dom": "^16.0.6",
     "@types/styled-components": "^5.1.26",
     "audit-ci": "6.6.1",
-    "autoprefixer": "^9.4.3",
+    "autoprefixer": "10.4.14",
     "babel-core": "7.0.0-bridge.0",
-    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-styled-components": "2.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
-    "cssnano": "^5.0.2",
+    "cssnano": "6.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
     "enzyme-to-json": "^3.6.2",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "hoek": "^6.1.3",
-    "husky": "^7.0.2",
+    "husky": "^8.0.3",
     "jest-styled-components": "^7.1.1",
-    "node-sass": "^8.0.0",
-    "prettier": "1.16.3",
+    "node-sass": "9.0.0",
+    "postcss": "8.4.27",
+    "prettier": "3.0.0",
     "stylelint": "^15.10.2",
-    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-recommended-scss": "12.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "stylelint-scss": "^3.16.0",
-    "sugarss": "^2.0.0",
+    "stylelint-scss": "5.0.1",
+    "sugarss": "^4.0.1",
     "ts-loader": "9.4.4",
     "tslint": "6.1.3",
     "tslint-config-prettier": "^1.18.0",
