--- a/package.json
+++ b/package.json
@@ -55,88 +55,89 @@
     "preset": "ts-jest/presets/js-with-babel"
   },
   "dependencies": {
-    "@babel/core": "7",
-    "@babel/plugin-transform-runtime": "7",
-    "@babel/preset-env": "7",
-    "@babel/preset-typescript": "^7.21.5",
-    "@babel/runtime": "7",
-    "@github/webauthn-json": "^0.6.6",
-    "@rails/activestorage": "^7.0.4-2",
-    "@rails/ujs": "^7.0.4-2",
-    "axios": "^0.21.2",
-    "babel-loader": "8",
+    "@babel/core": "7.22.9",
+    "@babel/plugin-transform-runtime": "7.22.9",
+    "@babel/preset-env": "7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@babel/runtime": "7.22.6",
+    "@github/webauthn-json": "^2.1.1",
+    "@rails/activestorage": "^7.0.6",
+    "@rails/ujs": "^7.0.6",
+    "axios": "^1.4",
+    "babel-loader": "9.1.3",
     "bs58": "5.0.0",
     "brave-ui": "github:brave/brave-ui#e4c049880199ac652b8f69610b8b70d1cd6d906f",
     "chart.js": "^2.7.2",
-    "clipboard": "^2.0.1",
-    "compression-webpack-plugin": "9",
+    "clipboard": "^2.0.11",
+    "compression-webpack-plugin": "10",
     "css-loader": "^6.8.1",
-    "css-minimizer-webpack-plugin": "^5.0.0",
-    "dompurify": "^2.3.3",
-    "is-accessor-descriptor": "3.0.1",
-    "js-yaml": "3.13.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "dompurify": "^3.0.5",
+    "is-accessor-descriptor": "3.0.2",
+    "js-yaml": "4.1.0",
     "kind-of": "^6.0.3",
     "mini-css-extract-plugin": "^2.7.6",
     "moment": "^2.29.4",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.8.1",
     "react": "^16.6.3",
-    "react-avatar-editor": "^11.0.4",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^16.6.3",
-    "react-intl": "^3.3.2",
-    "react-select": "^5.7.3",
+    "react-intl": "^6.4.4",
+    "react-select": "^5.7.4",
     "react-tooltip": "^4.2.3",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.3.1",
+    "sass": "^1.64.1",
+    "sass-loader": "^13.3.2",
     "shakapacker": "7.0.2",
     "style-loader": "^3.3.3",
     "styled-components": "5.2.1",
-    "terser-webpack-plugin": "5",
-    "tributejs": "^3.7.1",
-    "webpack": "5",
-    "webpack-assets-manifest": "5",
-    "webpack-cli": "4",
-    "webpack-dev-server": "^4.15.0",
-    "webpack-merge": "5"
+    "terser-webpack-plugin": "5.3.9",
+    "tributejs": "^5.1.3",
+    "webpack": "5.88.2",
+    "webpack-assets-manifest": "5.1.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "5.9"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-react": "^7.0.0",
-    "@rails/webpacker": "^5.4.3",
-    "@types/jest": "^24.0.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-react": "^7.22.5",
+    "@rails/webpacker": "^5.4.4",
+    "@types/jest": "^29.5.3",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "@types/styled-components": "^5.1.0",
+    "@types/styled-components": "^5.1.26",
     "audit-ci": "6.6.1",
-    "autoprefixer": "^9.4.3",
+    "autoprefixer": "10.4.14",
     "babel-core": "7.0.0-bridge.0",
-    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-styled-components": "2.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
-    "cssnano": "^5.0.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.4",
+    "cssnano": "6.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "enzyme-to-json": "^3.6.2",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "hoek": "^6.0.1",
-    "husky": "^7.0.2",
-    "jest-styled-components": "^7.0.2",
-    "node-sass": "^8.0.0",
-    "prettier": "1.16.3",
-    "stylelint": "^15.10.1",
-    "stylelint-config-recommended-scss": "^4.2.0",
+    "hoek": "^6.1.3",
+    "husky": "^8.0.3",
+    "jest-styled-components": "^7.1.1",
+    "node-sass": "9.0.0",
+    "postcss": "8.4.27",
+    "prettier": "3.0.0",
+    "stylelint": "^15.10.2",
+    "stylelint-config-recommended-scss": "12.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "stylelint-scss": "^3.16.0",
-    "sugarss": "^2.0.0",
-    "ts-loader": "^5.3.0",
-    "tslint": "^5.14.0",
+    "stylelint-scss": "5.0.1",
+    "sugarss": "^4.0.1",
+    "ts-loader": "9.4.4",
+    "tslint": "6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^8.0.1",
-    "tslint-react": "^3.6.0",
-    "typescript": "^5.1.3"
+    "tslint-config-standard": "9.0",
+    "tslint-react": "5.0",
+    "typescript": "^5.1.6"
   },
   "resolutions": {
     "node-fetch": "2.6.7",
