--- a/package.json
+++ b/package.json
@@ -63,10 +63,11 @@
     "@github/webauthn-json": "^2.1.1",
     "@rails/activestorage": "^7.0.6",
     "@rails/ujs": "^7.0.6",
+    "@solana/web3.js": "^1.78.4",
     "axios": "^1.4",
     "babel-loader": "9.1.3",
-    "bs58": "5.0.0",
     "brave-ui": "git+https://github.com/brave/brave-ui#11019732ef5fc09a75bae371c3f3ffece651d97c",
+    "bs58": "5.0.0",
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.11",
     "compression-webpack-plugin": "10",
@@ -79,6 +80,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
+    "qr-code-styling": "^1.6.0-rc.1",
     "react": "^16.6.3",
     "react-avatar-editor": "^13.0.0",
     "react-dom": "^16.6.3",
@@ -92,6 +94,7 @@
     "styled-components": "5.3.11",
     "terser-webpack-plugin": "5.3.9",
     "tributejs": "^5.1.3",
+    "web3-utils": "^4.0.5",
     "webpack": "5.88.2",
     "webpack-assets-manifest": "5.1.0",
     "webpack-cli": "5.1.4",
