--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "axios": "^1.4",
     "babel-loader": "9.1.3",
     "bs58": "5.0.0",
-    "brave-ui": "github:brave/brave-ui#11019732ef5fc09a75bae371c3f3ffece651d97c",
+    "brave-ui": "git+https://github.com/brave/brave-ui#11019732ef5fc09a75bae371c3f3ffece651d97c",
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.11",
     "compression-webpack-plugin": "10",
