--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -2,8 +2,14 @@
   "name": "creators-next",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "postcss":  {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev -p 5000",
+    "dev": "node scripts/create-local-server.js",
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
@@ -14,12 +20,13 @@
     "test": "jest",
     "stylelint": "stylelint \"**/*.css\"",
     "format": "prettier -w .",
-    "format:check": "prettier -c .",
-    "prepare": "husky install"
+    "format:check": "prettier -c ."
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "express": "^4.18.2",
     "next": "^13.4.12",
+    "next-http-proxy-middleware": "^1.2.5",
     "next-intl": "^3.0.0-beta.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "autoprefixer": "^10.4.14",
+    "husky": "^8.0.3",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^13.4.12",
@@ -43,7 +51,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.2.3",
