--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,7 +9,7 @@
     }
   },
   "scripts": {
-    "dev": "node scripts/create-local-server.js",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/create-local-server.js",
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
