--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint",
     "lint:fix": "eslint src --fix && npm run format",
     "lint:strict": "eslint --max-warnings=0 src",
+    "postinstall": "patch-package",
     "start": "next start -p 3001",
     "stylelint": "stylelint \"**/*.css\"",
     "test": "jest",
@@ -50,6 +51,7 @@
     "lint-staged": "^13.2.3",
     "miragejs": "^0.1.47",
     "next-router-mock": "^0.9.7",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.3",
