--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -19,9 +19,8 @@
   },
   "dependencies": {
     "@brave/leo": "github:brave/leo#51a2b99bd8939658c1195e9ee83450911eb3b889",
+    "axios": "^1.5.0",
     "clsx": "^2.0.0",
-    "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6",
     "next": "^13.4.12",
     "next-intl": "^3.0.0-beta.9",
     "react": "^18.2.0",
